# pvjohnston.com

./: .gitignore  404.html  LICENSE  MIGRATION.md  README.md  about.markdown  colophon.markdown  contact.markdown  index.html  pvjohnston-site.cabal  resume.markdown  robots.txt
app/: site.hs
bib/: bibliography.bib  style.csl
calcs/: build_tables.py  conv_anom1.jsonl  conv_anom2.jsonl  conv_normal.jsonl  converge.py  diagnose_longT.py  dtconv.py  evolve.py  evolve4.py  gate.py  gate_out.npz  lowT.json  lowT.py  plateau.json  plateau.py  scan2.json  scan2.py  scan_T.json  scan_T.py  sensitivity.py  sensitivity4.py  soliton_model.py  soliton_solver.py  track2.py  wannier.py
css/: default.css  site-theme.css
downloads/: chord-physics.py  conv_equiv.json  conv_range.json  fetch_exoplanets.py  momentum_decomposition.json  momentum_decomposition_1e-12.json  momentum_ratio.json  momentum_ratio_posthoc.json  momentum_refined_sweep.json  momentum_sweep.json  momentum_traj.json  nasa-exoplanet-dashboard.xlsx  nasa-exoplanets-2026-07-10.csv  off-tonic-recapitulation-1.0.0.sha256  pulse-independent-ci-README.md  pulse-independent-ci-analyse.py  pulse-independent-ci.py  pulse_ci_analysis.json  pulse_ci_exact_spot_checks.json  sgd_decomposition.json  sgd_ratio.json  sgd_refined_sweep.json  sgd_sweep.json  sgd_traj.json  siren-convention-adam.py  siren-convention-momentum.py  siren-convention-sgd.py  siren-init-scales.py  summarize_exoplanets.py
js/: code-copy.js  featured-random.js  figure-cycler.js  mathjax-config.js  site-theme.js  topic-filter.js
notes/: blog-authoring.md  questions.md
photonic_radar/: calculation_log.txt  input_script.py  run.bsh
posts/: 2025-01-20-chemical-kinetics.markdown  2025-01-22-discrete-math.markdown  2025-01-22-discrete-math2.markdown  2025-01-22-discrete-math3.markdown  2025-01-22-discrete-math4.markdown  2025-01-22-discrete-math5.markdown  2025-01-22-discrete-math6.markdown  2025-01-22-discrete-math7.markdown  2025-01-25-radiochemistry.markdown  2025-02-18-Understanding-Network-Paths.markdown  2025-02-19-Evolving-Network-Diagnostics-for-the-Modern-Security-Landscape.markdown  2026-01-16-quantum-tunneling-psi4-results.md  2026-06-14-rich-tikz-with-dvisvgm.md  (+58 more)
(+769 files in other folders)
