cabal-version:       2.2

name:                pvjohnston-site
version:             0.1.0.0
homepage:            https://pvjohnston.com
license:             BSD-3-Clause
license-file:        LICENSE
author:              Peter Johnston
maintainer:          pvjohnst@gmail.com
copyright:           2025-2026 Peter Johnston
category:            Web
build-type:          Simple
extra-source-files:  README.md

common warnings
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

library
  import:              warnings
  hs-source-dirs:      lib
  exposed-modules:     Blog.TikZ
                       Blog.Compilers
                       Blog.Context
                       Blog.Feed
                       Blog.Site
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base == 4.*
                     , hakyll >= 4.15
                     , pandoc
                     , pandoc-types >= 1.22.2.1
                     , text
                     , directory
                     , process
                     , temporary

executable site
  import:              warnings
  main-is:             site.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base == 4.*
                     , hakyll >= 4.15
                     , pvjohnston-site
  ghc-options:         -threaded

test-suite site-test
  import:              warnings
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base == 4.*
                     , pvjohnston-site
                     , pandoc-types >= 1.22.2.1
                     , text
